deployment/lnmp-nginx.service.linux.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx
  # namespace: my-namespace
  labels:
    app: lnmp
    tier: frontend
    version: 0.0.1
spec:
  # 若类型为 ingress，可以不声明 type

  # externalIPs:
  #   - 192.168.57.110
  # 暴露服务方式之一
  # type: LoadBalancer

  # 暴露服务方式之一
  type: NodePort

  # 集群内的私有 ip ，this is default
  # type: ClusterIP
  # clusterIP: None

  # sessionAffinity: None

  # 定义标签选择器
  selector:
    app: lnmp
    tier: frontend
    version: 0.0.1
  ports:
  - name: https
    protocol: TCP
    port: 443
    # targetPort: 443
    # 通过访问 Service 的 port 端口转发到 Pod 的 targetPort 端口上, targetPort 是 pod 上的端口

    # 暴露服务方式之一
    # 将 service 的 port 映射到每个 node 的 port 上，如果不指定 nodePort,k8s 将随机映射
    nodePort: 443
  - name: http
    protocol: TCP
    port: 80
    nodePort: 80
status:
  loadBalancer: {}
---
