deployment/lnmp-ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
  name: lnmp
  namespace: default
spec:
  tls:
  - hosts:
    - www.t.khs1994.com
    secretName: lnmp-ingress-nginx-tls
  rules:
  - host: www.t.khs1994.com
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 443
        path: /
